# awesome-errors

./: .gitignore  README.md  pyproject.toml
examples/: analysis_example.py  fastapi_integration_example.py  fastapi_usage.py  http_exception_details.py  test_http_exception_details.py  translation_example.py
src/awesome_errors/: __init__.py  litestar_utils.py
src/awesome_errors/analysis/: __init__.py  decorators.py  error_analyzer.py
src/awesome_errors/client/: __init__.py  exceptions.py  response_parser.py
src/awesome_errors/converters/: __init__.py  generic.py  pydantic_converter.py  python_converter.py  sql_converter.py  universal_converter.py
src/awesome_errors/core/: error_codes.py  error_response.py  exceptions.py  renderers.py
src/awesome_errors/i18n/: translator.py
src/awesome_errors/i18n/locales/en/: errors.json
src/awesome_errors/i18n/locales/test/: errors.json
src/awesome_errors/i18n/locales/uk/: errors.json
src/awesome_errors/integrations/: __init__.py  fastapi_auto_docs.py
src/awesome_errors/middleware/: fastapi.py  litestar.py
src/awesome_errors/websocket/: __init__.py  error_handler.py  exceptions.py
tests/: test_client_parser.py  test_converters.py  test_core_exceptions.py  test_decorators.py  test_error_analyzer.py  test_i18n.py  test_integration.py  test_litestar_openapi.py
