[project]
name = "awesome-errors"
version = "0.1.0"
description = "A comprehensive error handling library for Python applications with i18n support"
authors = [{ name = "THEROER", email = "theroer09@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "msgspec>=0.19,<0.20",
    "sqlalchemy>=2.0,<3",
    "litestar>=2.19.0,<3",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115.14,<0.116",
    "pydantic[email]>=2.0,<3",
]
pydantic = [
    "pydantic[email]>=2.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=7.0,<8",
    "pytest-cov>=4.0,<5",
    "pytest-asyncio>=0.21.0,<0.22",
    "black>=23.0,<24",
    "mypy>=1.0,<2",
    "httpx>=0.24.0,<0.25",
    "ruff>=0.14.2,<0.15",
    "fastapi>=0.115.14,<0.116",
    "pydantic[email]>=2.0,<3",
]

[tool.hatch.build.targets.sdist]
include = ["src/awesome_errors"]

[tool.hatch.build.targets.wheel]
include = ["src/awesome_errors"]

[tool.hatch.build.targets.wheel.sources]
"src/awesome_errors" = "awesome_errors"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
