[project]
name = "awesome-errors"
version = "0.2.0"
description = "A comprehensive error handling library for Python applications with i18n support"
authors = [{ name = "THEROER", email = "theroer09@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "msgspec>=0.20.0,<0.21",
    "sqlalchemy>=2.0,<3",
    "litestar>=2.21.1,<3",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115.14,<0.116",
    "pydantic[email]>=2.0,<3",
]
pydantic = [
    "pydantic[email]>=2.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=4.0,<5",
    "pytest-asyncio>=1.3.0,<2",
    "black>=23.0,<24",
    "mypy>=1.0,<2",
    "httpx>=0.28.1,<1",
    "ruff>=0.15.5,<0.16",
    "fastapi>=0.115.14,<0.116",
    "pydantic[email]>=2.0,<3",
]

[tool.hatch.build.targets.sdist]
include = ["src/awesome_errors"]

[tool.hatch.build.targets.wheel]
include = ["src/awesome_errors"]

[tool.hatch.build.targets.wheel.sources]
"src/awesome_errors" = "awesome_errors"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
